Ajuste no anuncio -ajustado problema que não filtrava terrenos

--- a/leisure/src/main/resources/templates/anuncio.html
+++ b/leisure/src/main/resources/templates/anuncio.html
@@ -30,7 +30,7 @@
                                 <option value="apartamento">Apartamento</option>
                                 <option value="casa">Casa</option>
                                 <option value="sitio">Sítio</option>
-                                <option value="terrenos">Terreno</option> 
+                                <option value="terreno">Terreno</option> 
                             </select>
                         </label>
                     </div>
