Criada pagina de detalhes -estilização da pagina de detalhes do imovel

--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -5,6 +5,7 @@
 @import url('anuncio-resultado.css');
 @import url('botoes.css');
 @import url('cabecalho.css');
+@import url('detalhes-imovel.css');
 @import url('duvidas.css');
 @import url('edicaoImovel.css');
 @import url('estilizacoes.css');
