--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -13,6 +13,8 @@
         </div>
         <input type="text" id="email" onblur="checkIguality('email')" hidden>
         <span id="email-feedback"></span>
+
+        <!-- CARROSSEL -->
         <section class="carrossel">
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -173,7 +175,7 @@
                             <img class="time__card-imagem" src="/img/imagem/Danilo.jpg" alt="Foto do Danilo">
                             <div class="time__card__info">
                                 <h3 class="titulo__terceiro">Danilo</h3>
-                                <p class="time_card__info-texto">Front-end / UX</p>
+                                <p class="time_card__info-texto">Front-end</p>
                             </div>
                         </div>
                     </div>
@@ -182,7 +184,7 @@
                             <img class="time__card-imagem" src="/img/imagem/Enzo.jpg" alt="Foto do Enzo">
                             <div class="time__card__info">
                                 <h3 class="titulo__terceiro">Enzo</h3>
-                                <p class="time_card__info-texto">Back-end / DBA</p>
+                                <p class="time_card__info-texto">DBA</p>
                             </div>
                         </div>
                     </div>
@@ -191,7 +193,7 @@
                             <img class="time__card-imagem" src="/img/imagem/Esau.jpg" alt="Foto do Esau">
                             <div class="time__card__info">
                                 <h3 class="titulo__terceiro">Esau</h3>
-                                <p class="time_card__info-texto">Dev mobile / UX</p>
+                                <p class="time_card__info-texto">Dev mobile</p>
                             </div>
                         </div>
                     </div>
@@ -200,7 +202,7 @@
                             <img class="time__card-imagem" src="/img/imagem/Marcelo.jpg" alt="Foto do Marcelo">
                             <div class="time__card__info">
                                 <h3 class="titulo__terceiro">Marcelo</h3>
-                                <p class="time_card__info-texto">Back-end / DBA</p>
+                                <p class="time_card__info-texto">Back-end</p>
                             </div>
                         </div>
                     </div>
