Ajustes backend -Ajustes na página de visualização do imóvel -Ajustes no método de atualizar imóvel -Interessado consegue conversar diretamente no whatsapp com o anunciante

--- a/leisure/src/main/resources/templates/edicaoImovel.html
+++ b/leisure/src/main/resources/templates/edicaoImovel.html
@@ -51,7 +51,7 @@
             
                                 <li class="editar__anuncio__card__conteudo">
                                     <label class="editar__anuncio__card__conteudo__texto" for="anuncioValor">IPTU:R$</label>
-                                    <input class="editar__anuncio__card__conteudo__resultado" type="text" name="preco" id="anuncioValor" th:value="${imovel.iptu}">
+                                    <input class="editar__anuncio__card__conteudo__resultado" type="text" name="iptu" id="anuncioValor" th:value="${imovel.iptu}">
                                 </li>
             
                                 <li class="editar__anuncio__card__conteudo" >
