--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -39,10 +39,10 @@
             </div>
             <p>Qual é o tipo de imóvel que você deseja anunciar?</p>
             <select class="anunciar__conteudo__selecao" name="tipo" id="imovelTipo">
-                <option class="anunciar__conteudo__selecao-opcao" value="apartamento">Apartamento</option>
-                <option class="anunciar__conteudo__selecao-opcao" value="casa">Casa</option>
-                <option class="anunciar__conteudo__selecao-opcao" value="sitio">Sitío</option>
-                <option class="anunciar__conteudo__selecao-opcao" value="terreno">Terreno</option>
+                <option class="anunciar__conteudo__selecao-opcao" value="Apartamento">Apartamento</option>
+                <option class="anunciar__conteudo__selecao-opcao" value="Casa">Casa</option>
+                <option class="anunciar__conteudo__selecao-opcao" value="Sítio">Sitío</option>
+                <option class="anunciar__conteudo__selecao-opcao" value="Terreno">Terreno</option>
             </select>
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior disable" type="button">Anterior</button>
