--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -11,8 +11,8 @@
         <div th:if="${logout}">
             <div class="alert alert-danger" th:text="${logout}"></div>
         </div>
-        <input type="text" id="email" onblur="checkIguality('email')" hidden>
-        <span id="email-feedback"></span>
+        <!-- <input type="text" id="email" onblur="checkIguality('email')" hidden>
+        <span id="email-feedback"></span> -->
 
         <!-- CARROSSEL -->
         <section class="carrossel">
