--- a/leisure/src/main/resources/static/style/login-cadastro.css
+++ b/leisure/src/main/resources/static/style/login-cadastro.css
@@ -1,7 +1,44 @@
-.cadastro__container__conteudo{
+/* .cadastro__container__conteudo{
     margin: 1em 0;
     display: flex;
     flex-direction: column;
+}
+
+.login__cadastro__container__botao__cadastro p {
+    margin: 3em 0 2em 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 15px
+}
+
+.login__cadastro__container__botao__cadastro p::before {
+    content: '';
+    display: block;
+    width: 240px;
+    height: 1px;
+    background: gray;
+}
+
+.login__cadastro__container__botao__cadastro p::after {
+    content: '';
+    display: block;
+    width: 240px;
+    height: 1px;
+    background: gray;
+}
+
+.login__cadastro__container__botao__cadastro span {
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    color: var(--cor-font-destaque);
+    transition: 0.3s;
+}
+
+.login__cadastro__container__botao__cadastro span:hover {
+    color: var(--cor-terceira);
 }
 
 .cadastro__container__validacaoSenha {
@@ -16,4 +53,4 @@
 }
 .cadastro__container__conteudo input:focus{
     outline: none;
-}
+} */
