Ajuste loginCadastro -adicionado sombra no campo

--- a/leisure/src/main/resources/static/style/loginCadastro.css
+++ b/leisure/src/main/resources/static/style/loginCadastro.css
@@ -73,6 +73,7 @@
     padding: 1em;
     width: 90vw;
     border: 1px solid var(--cor-segunda);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
     border-radius: 1em;
 }
 
