--- a/leisure/src/main/resources/templates/LoginCadastro.html
+++ b/leisure/src/main/resources/templates/LoginCadastro.html
@@ -54,7 +54,7 @@
                 <div class="login__cadastro__container__botao">
                     <div class="login__cadastro__container__botao__cadastro">
                         <p>ou</p>
-                        <span data-acesso="btn-login">Já tenho uma conta</span>
+                        <span data-acesso="btn-login">Já tenho uma conta <i class="fa-solid fa-arrow-right"></i></span>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 <div class="login__cadastro__container__botao">
                     <div class="login__cadastro__container__botao__cadastro">
                         <p>ou</p>
-                        <span data-acesso="btn-cadastro">Criar uma conta</span>
+                        <span data-acesso="btn-cadastro">Criar uma conta <i class="fa-solid fa-arrow-right"></i></span>
                     </div>
                 </div>
             </div>
