--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -128,7 +128,7 @@
                     </li>
                     <li class="lista-menu__item btnMeusDados">
                         <a class="container__link" href="/usuario/perfil/meusdados">
-                            <span>Meus Dados</span>
+                            <span>Meus dados</span>
                         </a>
                     </li>
                     <div th:replace="~{fragments/botoes :: logout}"></div>
